# ComputerVisionBlueprint

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
resources/appimage/: OpenCVNodeEditor.desktop
resources/images/: images.qrc
scripts/: appimage_deploy.py  compile.sh  setup.sh
src/: main.cpp
src/CustomWidget/: CheckBoxReadOnly.cpp  CheckBoxReadOnly.h  DragableTreeOfNodes.cpp  DragableTreeOfNodes.h  DropGraphicsView.cpp  DropGraphicsView.h
src/Nodes/: NodesInclude.cpp  NodesInclude.h
src/Nodes/Basic/: AdditionModel.h  AdditionModel.hpp  DivisionModel.h  DivisionModel.hpp  MathOperationDataModel.cpp  MathOperationDataModel.hpp  MultiplicationModel.hpp  NumberDisplayDataModel.cpp  NumberDisplayDataModel.hpp  NumberSourceDataModel.cpp  NumberSourceDataModel.hpp  SubtractionModel.h  SubtractionModel.hpp
src/Nodes/Constants/: PiModel.cpp  PiModel.h
src/Nodes/Conversor/: MatQt.cpp  MatQt.h
src/Nodes/Data/: BooleanData.h  CascadeClassifierData.h  DataInclude.h  FileData.h  ImageData.h  ImageFormatData.h  LinesSegmentData.h  NumericalData.h  PixmapData.hpp  PointData.h  RectData.h  RectsData.h  SizeData.h  VariantData.h
src/Nodes/DataOperations/: ScaleRects.cpp  ScaleRects.h
src/Nodes/Images/: ConvertImageToForm.ui  ConvertImageToModel.cpp  ConvertImageToModel.h  CutImageModel.cpp  CutImageModel.h  DrawLinesForm.ui  DrawLinesModel.cpp  DrawLinesModel.h  DrawRectsForm.ui  DrawRectsModel.cpp  DrawRectsModel.h  ImageFromFile.cpp  ImageFromFile.h  ImageInfoForm.ui  ImageInfoModel.cpp  ImageInfoModel.h  ImageLoaderModel.cpp  ImageLoaderModel.hpp  ImageShowModel.cpp  ImageShowModel.hpp  ScaleImageForm.ui  ScaleImageModel.cpp  ScaleImageModel.h
src/Nodes/OpenCV/: BlurForm.ui  BlurModel.cpp  BlurModel.h  CannyForm.ui  CannyModel.cpp  CannyModel.h  CascadeClassifier.cpp  CascadeClassifier.h  CascadeClassifierForm.ui  CascadeClassifierModel.cpp  CascadeClassifierModel.h  ColorCV.cpp  ColorCV.h  ColorCVModel.cpp  ColorCVModel.h  DetectMultiScaleForm.ui  DetectMultiScaleModel.cpp  DetectMultiScaleModel.h  EqualizeHist.cpp  EqualizeHist.h  EqualizeHistModel.cpp  EqualizeHistModel.h  FacialDetectorModel.cpp  FacialDetectorModel.h  GaussianBlurForm.ui  GaussianBlurModel.cpp  GaussianBlurModel.h  HoughLinesP.cpp  HoughLinesP.h  HoughLinesPForm.ui  HoughLinesPModel.cpp  HoughLinesPModel.h  PyrDown.cpp  PyrDown.h  PyrUp.cpp  PyrUp.h  RectangleForm.ui  RectangleModel.cpp  RectangleModel.h
src/Nodes/Variables/: FileFromUrlForm.ui  FileFromUrlModel.cpp  FileFromUrlModel.h  FileVarForm.ui  FileVarModel.cpp  FileVarModel.h  RectForm.ui  RectModel.cpp  RectModel.h  RectVarForm.ui  RectVarModel.cpp  RectVarModel.h  SizeVarForm.ui  SizeVarModel.cpp  SizeVarModel.h
src/Nodes/Video/: CameraForm.ui  CameraModel.cpp  CameraModel.h  CaptureModel.cpp  CaptureModel.h
src/Widgets/: MainWindow.cpp  MainWindow.h  MainWindow.ui
